tests/fsharp/typecheck/sigs/neg48.bsl

neg48.fs(40,16,40,21): typecheck error FS0023: The member 'Item1' can not be defined because the name 'Item1' clashes with the generated property 'Item1' in this type or module

neg48.fs(44,21,44,26): typecheck error FS0023: The member 'Item1' can not be defined because the name 'Item1' clashes with the generated property 'Item1' in this type or module

neg48.fs(48,16,48,21): typecheck error FS0023: The member 'Item2' can not be defined because the name 'Item2' clashes with the generated property 'Item2' in this type or module

neg48.fs(52,21,52,26): typecheck error FS0023: The member 'Item2' can not be defined because the name 'Item2' clashes with the generated property 'Item2' in this type or module

neg48.fs(56,16,56,20): typecheck error FS0023: The member 'Tags' can not be defined because the name 'Tags' clashes with the generated type 'Tags' in this type or module

neg48.fs(60,21,60,25): typecheck error FS0023: The member 'Tags' can not be defined because the name 'Tags' clashes with the generated type 'Tags' in this type or module

neg48.fs(64,16,64,19): typecheck error FS0023: The member 'Tag' can not be defined because the name 'Tag' clashes with the generated property 'Tag' in this type or module

neg48.fs(68,16,68,20): typecheck error FS0023: The member 'Item' can not be defined because the name 'Item' clashes with the generated property 'Item' in this type or module

neg48.fs(72,21,72,25): typecheck error FS0023: The member 'Item' can not be defined because the name 'Item' clashes with the generated property 'Item' in this type or module

neg48.fs(76,16,76,20): typecheck error FS0023: The member 'Tags' can not be defined because the name 'Tags' clashes with the generated type 'Tags' in this type or module

neg48.fs(80,21,80,25): typecheck error FS0023: The member 'Tags' can not be defined because the name 'Tags' clashes with the generated type 'Tags' in this type or module

neg48.fs(84,16,84,19): typecheck error FS0023: The member 'Tag' can not be defined because the name 'Tag' clashes with the generated property 'Tag' in this type or module

neg48.fs(88,21,88,24): typecheck error FS0023: The member 'Tag' can not be defined because the name 'Tag' clashes with the generated property 'Tag' in this type or module

neg48.fs(92,16,92,20): typecheck error FS0023: The member 'Tags' can not be defined because the name 'Tags' clashes with the generated type 'Tags' in this type or module

neg48.fs(96,16,96,19): typecheck error FS0023: The member 'Tag' can not be defined because the name 'Tag' clashes with the generated property 'Tag' in this type or module

neg48.fs(102,16,102,19): typecheck error FS0023: The member 'Tag' can not be defined because the name 'Tag' clashes with the generated property 'Tag' in this type or module

neg48.fs(105,16,105,20): typecheck error FS0023: The member 'Tags' can not be defined because the name 'Tags' clashes with the generated type 'Tags' in this type or module

neg48.fs(108,16,108,20): typecheck error FS0023: The member 'Item' can not be defined because the name 'Item' clashes with the generated property 'Item' in this type or module
